round borders on mobile fixed

--- a/src/app/components/chat-thread/chat-thread.component.css
+++ b/src/app/components/chat-thread/chat-thread.component.css
@@ -599,3 +599,17 @@ video.chat-media {
         height: 50px;
         width: 50px;
     }
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    .root {
+        -moz-border-radius: 0;
+        -webkit-border-radius: 0;
+        border-radius: 0;
+    }
+
+    .ana-title {
+        -moz-border-radius: 0;
+        -webkit-border-radius: 0;
+        border-radius: 0;
+    }
+}
